# invoice-generator

./: .coverage  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: business_details.json
src/: __init__.py  __main__.py  cli.py  contact_manager.py  invoice_manager.py  models.py  pdf_generator.py
tests/: __init__.py  conftest.py  test_cli.py  test_contact_manager.py  test_invoice_manager.py  test_models.py  test_pdf_generator.py
